# tg_admin

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
.readme_assets/: description.md  usage.sh
docs/: ARCHITECTURE.md
examples/: config.nix  config.toml  data.nix
src/: config.rs  data.rs  main.rs  settings.rs  telegram.rs  utils.rs
