[package]
name = "tg_config"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
anyhow = "^1.0.86"
clap = { version = "^4.5.7", features = ["derive"] }
config = "0.14.0"
derive-new = "^0.6.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tempfile = { version = "3.10.1", features = ["nightly"] }
toml = "0.8.14"
v_utils = { version = "^1.3.18", features = ["io", "macros"] }
