[package]
name = "tg_admin"
version = "0.1.0"
edition = "2021"
description = "tg interface to change local structured data"
rust-version = "1.81"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/tg_admin"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dev-dependencies]
tempfile = { version = "3.10.1", features = ["nightly"] }

[dependencies]
anyhow = "^1.0.86"
clap = { version = "^4.5.7", features = ["derive"] }
config = "0.14.0"
derive-new = "^0.6.0"
insta = { version = "1.39.0", features = ["json"] }

# data
json5 = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_yaml = "0.9.34"

# telegram
teloxide = { version = "0.12.2", features = ["macros", "nightly"] }
tokio = { version = "1.38.0", features = ["full", "tracing"] }
toml = "0.8.14"
tracing = "0.1.40"
v_utils = { version = "^1.3.18", features = ["io", "macros"] }
