[package]
name = "tg_admin"
version = "0.1.0"
edition = "2021"
description = "tg interface to change local structured data"
rust-version = "1.81"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/tg_admin"

[package.metadata.cargo-machete]
ignored = ["derive-new", "serde", "tokio"]

[dependencies]
clap = { version = "^4.5.53", features = ["derive"] }
derive-new = "^0.7.0"
insta = { version = "1.45.1", features = ["json"] }

# data
json5 = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"

# telegram
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
toml = "0.9.10"
tracing = "0.1.44"
v_utils = { version = "^2.15.14", features = ["io", "macros", "cli"] }

[dev-dependencies]
tempfile = { version = "3.24.0", features = ["nightly"] }

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"
